--- a/docs/locales/fr/translation.json
+++ b/docs/locales/fr/translation.json
@@ -49,9 +49,15 @@
           "enable": "Activer la musique"
         }
       },
-      "video": {
+      "display": {
         "menu": "Affichage",
-        "title": "Paramètres d'affichage"
+        "title": "Paramètres d'affichage",
+        "brightness": {
+          "title": "Luminosité"
+        },
+        "contrast": {
+          "title": "Contraste"
+        }
       }
     },
     "credits": {
