lot of visual improvements

--- a/docs/locales/en/translation.json
+++ b/docs/locales/en/translation.json
@@ -25,6 +25,9 @@
         "lang": {
           "title": "Language"
         },
+        "theme": {
+          "title": "Theme"
+        },
         "keys": {
           "title": "Key Bindings"
         }
