--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -4,7 +4,7 @@
   "CLOSE": "Fermer",
 
   "app": {
-    "start": "Appuyer sur une touche"
+    "start": "Appuyer pour commencer"
   },
   "home": {
     "menu": "Accueil",
